--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ body {
   margin-left: 173px;
   align-items: center;
   grid-column-gap: 10px;
-  border: solid 1px black
 }
 
 .logo {
@@ -82,8 +81,14 @@ div.header-bottom > a {
   text-decoration: none;
   color:rgb(126, 126, 126);
   font-family: Arial;
-  border: 1px solid black;
   line-height: 24px;
+  padding-bottom: 7px;
+  margin-bottom: -1px;
+}
+
+.active-tab {
+  border-bottom: 4px solid rgb(0, 110, 255);
+  color: blue;
 }
 
 div.header-bottom > a > img {
@@ -93,6 +98,9 @@ div.header-bottom > a > img {
 .tools-btn {
   margin-left: 150px;
   height: 30px;
+  color:rgb(126, 126, 126);
+  font-family: Arial;
+  margin-bottom: 5px;
   border: none;
   background: none;
 }
