--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0px;
   display: grid;
   grid-template-rows: auto 1fr auto;
-
+  font-family: Arial;
 }
 
 .header {
@@ -109,6 +109,121 @@ div.header-bottom > a > img {
   border:1px solid rgb(182, 182, 182);
   background: rgb(248, 248, 248);
   cursor: pointer;
+}
+
+.link-section {
+  display: grid;
+  grid-template-rows: repeat(15, auto);
+ /*  border: 1px solid black; */
+}
+
+.top-ad{
+  display: grid;
+  grid-template-rows: repeat(2, auto);
+}
+
+.website {
+  display: grid;
+  grid-template-rows: repeat(4, auto);
+  width: 600px;
+  margin-left: 190px;
+  padding: 10px 0px;
+  align-items: center;
+  /* border: 1px solid black; */
+}
+
+.website-link {
+  display: grid;
+  grid-template-columns: repeat(100, max-content) 1fr;
+  margin: 0px;
+  /* border: 1px solid black; */
+}
+
+.website-link-link{
+  text-decoration: none;
+  margin: 0px;
+  align-self: center;
+  color: #202124;
+  font-size: 14px;
+  /* border: 1px solid black; */
+}
+
+.website-link-trans {
+  display: grid;
+  text-decoration: none;
+  align-self: center;
+  color: #1a0dab;
+  /* border: 1px solid black; */
+}
+
+.website-title > a {
+  text-decoration: none;
+  font-weight: 400;
+  font-family: Arial;
+  font-size: 20px;
+  color: #1a0dab;
+  margin: 4px 0px;
+}
+
+.website-title > a:hover {
+  text-decoration: underline;
+}
+
+.website-info > p {
+  margin: 0px;
+  margin-top: 8px;
+  color: rgb(71, 71, 71);
+  font-size: 14px;
+}
+
+.website-tags {
+  display: grid;
+  grid-template-columns: repeat(7, max-content);
+  margin: 0px;
+  width: auto;
+  font-size: 14px;
+}
+
+.tag {
+  padding: 3px 15px 0px 0px; 
+  text-decoration: none;
+  color: #1a0dab;
+  /* border: 1px solid black */
+}
+
+.top-tags {
+  display: grid;
+  grid-template-columns: repeat(2, 246px);
+  grid-template-rows: repeat(2, auto);
+  grid-column-gap: 80px;
+  width: 600px;
+  margin-left: 210px;
+  margin-top: 10px;
+  align-self: center
+  /* border: 1px solid black; */
+}
+
+.top-tag {
+  display: grid;
+  grid-template-rows: repeat(2, auto);
+  align-self: start;
+}
+
+.top-tag-link {
+  font-size: 20px;
+  color: #1a0dab;
+  text-decoration: none;
+  margin: 0px;
+}
+
+.top-tag-desc {
+  margin: 2px 0px 20px 0px;
+  font-size: 14px;
+}
+
+.ad::before {
+  font-weight: bold;
+  content: "Annonse · "
 }
 
 .margin-right-15px {
